--- a/style.css
+++ b/style.css
@@ -1,3 +1,105 @@
+html {
+    --color-accent: oklch(42.558% 0.10358 151.617);
+    accent-color: var(--color-accent)
+}
+
 body {
     font: 100%/1.5 system-ui;
+    max-width: 100ch;
+    margin-inline: max(1em, (100% - 100ch) / 2);
+}
+
+/* 
+Nav Bar
+*/
+
+nav ul, nav li {
+    display: contents;
+}
+
+nav {
+    display: flex;
+    margin-bottom: 1em;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: oklch(80% 3% 200);
+}
+
+nav a {
+    flex: 1;
+    text-decoration: none;
+    color: inherit;
+    text-align: center;
+    padding: 0.5em;
+}
+
+nav a.current {
+    border-bottom: 0.4em solid oklch(80% 3% 200);
+    padding-bottom: 0.5em;
+}
+
+nav a:hover {
+    border-bottom: 0.4em solid var(--color-accent);
+    background-color: oklch(from var(--color-accent) 95% 5% h);
+    padding-bottom: 0.5em;
+}
+
+/*
+Contact
+*/
+
+form {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 1em;
+}
+
+form label {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: 1 / -1;
+}
+
+form button {
+    grid-column: 1 / -1;
+}
+
+/*
+Projects
+*/
+
+.projects {
+    display: grid;
+    grid-template-columns:repeat(auto-fill, minmax(15em, 1fr));
+    gap: 1em;
+}
+
+.projects article {
+    grid-template-rows: subgrid;
+    grid-row: span 3;
+}
+
+.projects h2 {
+    margin: 0;
+}
+
+/*
+Headings
+*/
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1.1;
+    text-wrap: balance;
+}
+
+h1 {
+    font-size: 400%;
+}
+
+/*
+Home
+*/
+
+.home {
+    text-align: center;
 }
